--- a/theme/admin/style.css
+++ b/theme/admin/style.css
@@ -184,7 +184,7 @@ body {}
 /*  2.  Header Top CSS
 /*----------------------------------------*/
 .header-top-area, .footer-copyright-area{
-	background:#00c292;
+	background:#FFEB3B;
 }
 .logo-area{
 	padding:14px 0px;
