--- a/theme/admin/style.css
+++ b/theme/admin/style.css
@@ -193,13 +193,13 @@ body {}
 	float: right;
 }
 .nav.notika-top-nav .open>a, .nav.notika-top-nav .open>a:focus, .nav.notika-top-nav .open>a:hover {
-    background: #00c292;
-    border-color: 0px solid #00c292;
+    background: #ffeb3a;
+    border-color: 0px solid #f5ee0c;
 	
 }
 .nav.notika-top-nav>li>a:focus, .nav.notika-top-nav>li>a:hover {
     text-decoration: none;
-    background-color: #00c292;
+    background-color: #ffeb3a;
 }
 .navbar-nav>li>a{
 	color:#fff;
